--- a/docs/api/qiskit/qiskit.primitives.BackendEstimator.mdx
+++ b/docs/api/qiskit/qiskit.primitives.BackendEstimator.mdx
@@ -91,7 +91,7 @@ python_api_name: qiskit.primitives.BackendEstimator
     with bound parameters
 
     ```python
-    values = parameter_values[i].
+    values = parameter_values[i]
     ```
 
     **Parameters**
