--- a/docs/api/qiskit/qiskit.primitives.BaseEstimatorV1.mdx
+++ b/docs/api/qiskit/qiskit.primitives.BaseEstimatorV1.mdx
@@ -50,7 +50,7 @@ $$
   # calculate [ <psi1(theta1)|H1|psi1(theta1)> ]
   job = estimator.run([psi1], [H1], [theta1])
   job_result = job.result() # It will block until the job finishes.
-  print(f"The primitive-job finished with result {job_result}"))
+  print(f"The primitive-job finished with result {job_result}")
 
   # calculate [ <psi1(theta1)|H1|psi1(theta1)>,
   #             <psi2(theta2)|H2|psi2(theta2)>,
@@ -100,7 +100,7 @@ $$
     with bound parameters
 
     ```python
-    values = parameter_values[i].
+    values = parameter_values[i]
     ```
 
     **Parameters**
