--- a/docs/api/qiskit/qiskit.primitives.Estimator.mdx
+++ b/docs/api/qiskit/qiskit.primitives.Estimator.mdx
@@ -64,7 +64,7 @@ python_api_name: qiskit.primitives.Estimator
     with bound parameters
 
     ```python
-    values = parameter_values[i].
+    values = parameter_values[i]
     ```
 
     **Parameters**
