--- a/docs/api/qiskit/qiskit.transpiler.passes.RXCalibrationBuilder.mdx
+++ b/docs/api/qiskit/qiskit.transpiler.passes.RXCalibrationBuilder.mdx
@@ -27,7 +27,7 @@ python_api_name: qiskit.transpiler.passes.RXCalibrationBuilder
   from qiskit.circuit.library import QuantumVolume
   from qiskit.circuit.library.standard_gates import RXGate
 
-  from calibration.rx_builder import RXCalibrationBuilder
+  from qiskit.transpiler.passes import RXCalibrationBuilder
 
   qv = QuantumVolume(4, 4, seed=1004)
 
