--- a/docs/api/qiskit/qiskit.transpiler.passes.synthesis.high_level_synthesis.QFTSynthesisLine.mdx
+++ b/docs/api/qiskit/qiskit.transpiler.passes.synthesis.high_level_synthesis.QFTSynthesisLine.mdx
@@ -8,12 +8,14 @@ python_api_name: qiskit.transpiler.passes.synthesis.high_level_synthesis.QFTSynt
 
 # QFTSynthesisLine
 
-<Class id="qiskit.transpiler.passes.synthesis.high_level_synthesis.QFTSynthesisLine" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/transpiler/passes/synthesis/high_level_synthesis.py#L1020-L1063" signature="qiskit.transpiler.passes.synthesis.high_level_synthesis.QFTSynthesisLine" modifiers="class">
+<Class id="qiskit.transpiler.passes.synthesis.high_level_synthesis.QFTSynthesisLine" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/transpiler/passes/synthesis/high_level_synthesis.py#L1025-L1073" signature="qiskit.transpiler.passes.synthesis.high_level_synthesis.QFTSynthesisLine" modifiers="class">
   Bases: [`HighLevelSynthesisPlugin`](qiskit.transpiler.passes.synthesis.plugin.HighLevelSynthesisPlugin "qiskit.transpiler.passes.synthesis.plugin.HighLevelSynthesisPlugin")
 
   Synthesis plugin for QFT gates using linear connectivity.
 
   This plugin name is :`qft.line` which can be used as the key on an [`HLSConfig`](qiskit.transpiler.passes.HLSConfig "qiskit.transpiler.passes.synthesis.high_level_synthesis.HLSConfig") object to use this method with [`HighLevelSynthesis`](qiskit.transpiler.passes.HighLevelSynthesis "qiskit.transpiler.passes.synthesis.high_level_synthesis.HighLevelSynthesis").
+
+  Note that the plugin mechanism is not applied if the gate is called `qft` but is not an instance of `QFTGate`. This allows users to create custom gates with name `qft`.
 
   The plugin supports the following additional options:
 
@@ -34,7 +36,7 @@ python_api_name: qiskit.transpiler.passes.synthesis.high_level_synthesis.QFTSynt
 
   ### run
 
-  <Function id="qiskit.transpiler.passes.synthesis.high_level_synthesis.QFTSynthesisLine.run" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/transpiler/passes/synthesis/high_level_synthesis.py#L1048-L1063" signature="run(high_level_object, coupling_map=None, target=None, qubits=None, **options)">
+  <Function id="qiskit.transpiler.passes.synthesis.high_level_synthesis.QFTSynthesisLine.run" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/transpiler/passes/synthesis/high_level_synthesis.py#L1057-L1073" signature="run(high_level_object, coupling_map=None, target=None, qubits=None, **options)">
     Run synthesis for the given QFTGate.
   </Function>
 </Class>
