--- a/docs/api/qiskit/0.45/qiskit.algorithms.optimizers.NFT.mdx
+++ b/docs/api/qiskit/0.45/qiskit.algorithms.optimizers.NFT.mdx
@@ -28,9 +28,11 @@ python_api_name: qiskit.algorithms.optimizers.NFT
 
   **Notes**
 
-  In this optimization method, the optimization function have to satisfy three conditions written in [\[1\]](#id2).
+  In this optimization method, the optimization function have to satisfy three conditions written in   <span id="id1" />[\[1\]](#id2).
 
   **References**
+
+  <span id="id2" />
 
   \[[1](#id1)]
 
