Update links and titles

--- a/docs/guides/max-execution-time.mdx
+++ b/docs/guides/max-execution-time.mdx
@@ -65,7 +65,7 @@ To determine the ITTL and maximum TTL values for a batch, use the [`batch.detail
 ## Other limitations
 
 *   Inputs to jobs cannot exceed 64MB in size.
-*   Open plan users can use up to 10 minutes of QPU execution time per month (resets at 00:00 UTC on the first of each month). QPU execution time is the amount of time that the QPU is dedicated to processing your job. You can track your monthly usage on the [Platform dashboard,](https://quantum.ibm.com/)  [IBM Quantum&trade; Platform Jobs page,](https://quantum.ibm.com/jobs) and [Account](https://quantum.ibm.com/account) page.
+*   Open plan users can use up to 10 minutes of QPU execution time per month (resets at 00:00 UTC on the first of each month). QPU execution time is the amount of time that the QPU is dedicated to processing your job. You can track your monthly usage on the [Platform dashboard,](https://quantum.ibm.com/)  [IBM Quantum&trade; Platform Workloads page,](https://quantum.ibm.com/workloads) and [Account](https://quantum.ibm.com/account) page.
 
 ## Next steps
 
