--- a/docs/guides/estimate-job-run-time.mdx
+++ b/docs/guides/estimate-job-run-time.mdx
@@ -60,12 +60,12 @@ Output:
 ```
 
 <span id="view-usage"></span>
-## View the estimated job usage on IBM Quantum Platform
+## View the estimated workload (job) usage on IBM Quantum Platform
 
-You can view the estimated usage (how much quantum time the job will take to run) in two places on IBM Quantum Platform:
+You can view the estimated usage (how much quantum time the workload will take to run) in two places on IBM Quantum Platform:
 
-- On the [Jobs table](https://quantum.ibm.com/jobs) in the Usage column.  From the Home page, click *View all* on the Recent jobs table.  The Usage column shows the estimated usage for pending jobs, or actual usage for completed jobs.
-- On the job's details page. From the [Dashboard](https://quantum.ibm.com/) or [Jobs table](https://quantum.ibm.com/jobs), click the job ID to open the job details page.  The estimated usage is shown in the Status Timeline.
+- On the [Workloads table](https://quantum.ibm.com/workloads) in the Usage column.  From the Home page, click *View all* on the Recent workloads table.  The Usage column shows the estimated usage for pending workloads, or actual usage for completed workloads.
+- On the workload's details page. From the [Dashboard](https://quantum.ibm.com/) or [Workloads table](https://quantum.ibm.com/workloads), click the ID to open its details page.  The estimated usage is shown in the Status timeline.
 
 ## Next steps
 
