Add workaround to get serverless token in server

--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -39,7 +39,7 @@
     "import os\n",
     "from pathlib import Path\n",
     "Path(\"./serverless-manage-resources-workspace/source_files\").mkdir(exist_ok=True, parents=True)\n",
-    "os.chdir(\"./serverless-manage-resources\")"
+    "os.chdir(\"./serverless-manage-resources-workspace\")"
    ]
   },
   {
@@ -414,8 +414,12 @@
     "\n",
     "import tarfile\n",
     "from qiskit_serverless import IBMServerlessClient\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "serverless = IBMServerlessClient()\n",
+    "service = QiskitRuntimeService()\n",
+    "serverless = IBMServerlessClient(\n",
+    "    token=service.active_account()['token']\n",
+    ")\n",
     "files = serverless.files()\n",
     "demo_file = files[0]\n",
     "downloaded_tar = serverless.file_download(demo_file)\n",
