--- a/docs/guides/pulse.ipynb
+++ b/docs/guides/pulse.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "This page shows you how to add a calibration to your circuit.\n",
     "\n",
-    "**Note:** Not all providers support pulse gates."
+    "**Note:** Not all QPUs support pulse gates. See the [Compute resources page](https://quantum.ibm.com/services/resources) for whether a specific QPU supports pulse gates. "
    ]
   },
   {
