Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/ai-transpiler-passes.mdx
+++ b/docs/guides/ai-transpiler-passes.mdx
@@ -104,7 +104,7 @@ These custom collection passes limit the sizes of the collected sub-circuits so 
 
 ## Limits
 
-Refer to the [Qiskit Transpiler Service documentation](./qiskit-transpiler-service#limits-of-the-qiskit-transpiler-service) to know more about the limits that apply to the AI-powered transpiler passes.
+Refer to the [Qiskit Transpiler Service documentation](./qiskit-transpiler-service#limits-of-the-qiskit-transpiler-service) for more information about the limits that apply to the AI-powered transpiler passes.
 
 ## Citation
 
